--- a/website/static/css/custom.css
+++ b/website/static/css/custom.css
@@ -1,16 +1,14 @@
-/* your custom css */
-
-@media only screen and (min-device-width: 360px) and (max-device-width: 736px) {
+.blockContent h2 {
+    text-align: center;
 }
 
-@media only screen and (min-width: 1024px) {
+.blockImage {
+    max-height: 100px;
+    max-width: 100% !important;
+    text-align: center;
 }
 
-@media only screen and (max-width: 1023px) {
-}
-
-@media only screen and (min-width: 1400px) {
-}
-
-@media only screen and (min-width: 1500px) {
+.blockImage img {
+    height: 100px;
+    padding: 10px 0;
 }
